Update version and poms.
Add vscode files to .gitignore.